fixed external links in svg
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@194851 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,7 @@ Done since 0.20.3 release
 - Fixed PDF-Renderer to work on EBCDIC systems 
   (Actually on systems where file.encoding != ASCII/ISO-8859)
   Submitted by: Jason West <Jason.West@mail.state.ky.us>
+- Fixed svg links to external url (Keiron)
   
 ==============================================================================
 Done since 0.20.2 release
