updated to ant 1.5 also contains TraXLiaison class from optional jar which is required by the style task
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194995 13f79535-47bb-0310-9956-ffa450edef68

--- a/lib/readme
+++ b/lib/readme
@@ -2,9 +2,11 @@ This directory contains some libraries or class files necessary
 for compiling, running or testing Fop.
 
 ant.jar
-version 1.4.1
+version 1.5
 Ant is the scripting tool which is used to build Fop or to run 
 the test scripts. see build.xml in root for more information
+Also has the class org.apache.tools.ant.taskdefs.optional.TraXLiaison
+added which is needed for the style task.
 
 batik.jar
 version 1.5beta2
