Update from Ant 1.4.1 to 1.5.1 (Optional classes needed for style task included)
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@195469 13f79535-47bb-0310-9956-ffa450edef68

--- a/lib/readme
+++ b/lib/readme
@@ -3,6 +3,9 @@ for compiling, running or testing Fop.
 
 ant.jar           Ant is the scripting tool which is used to build Fop or to run 
                   the test scripts. see build.xml in root for more information
+                  Also has the XSLT liaison classes
+                  org.apache.tools.ant.taskdefs.optional.*Liaison
+                  added which are needed for the style task.
 
 batik.jar         the svg library from Batik at xml.apache.org
 version 1.5 beta2
