--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,25 @@
 ==============================================================================
 Done since 0.20.4 release
 
+- Removed the necessity for a buildtools.jar (Jeremias Maerki)
+- Updated several JARs: Ant 1.5.1, Xerces 2.2.0, Xalan 2.4.1 (Jeremias Maerki)
+- Fixed some multi-threading issues (NPEs)
+  Submitted by: Joachim Unger <joachim.unger@softwareag.com>
+- Improved registration of ImageReader implementations (Jeremias Maerki)
+- Refactored baseDir stuff. Internally most code has been changed to work on 
+  URLs instead of filenames. The baseDir property is evaluated to a baseURL 
+  which can be accessed through Configuration.getBaseURL() (Jeremias Maerki)
+- Added a fontBaseDir property (similar to baseDir) which represents a base 
+  dir/URL for fonts. If this property isn't set, a fallback is made to 
+  baseDir. (Jeremias Maerki)
+- Fixed some javadoc warnings
+  Submitted by: Victor Mote <vic@outfitr.com>
+- Added translation for GoToPageDialog and update for czech translations
+  Submitted by: Michal Buchtik <BuchtikM@dlsystem.cz>
+- background properties for all regions + regions precedence support 
+  (Oleg Tkachenko)
+- TXTRenderer output encoding (Oleg Tkachenko)
+- border-spacing support (Oleg Tkachenko)
 - New Avalon Framework JAR with Log4J support (Bug 11274) (Jeremias Maerki)
 - Added a RunLengthEncode filter for the PostScript renderer
   Submitted by: Stephen Wolke <smwolke@geistig.com>
