Fixed problem with jpegs with icc profile and acrobat reader 5 (Bug #11301) Submitted by: Stephan Neuhaus <stephan.neuhaus@myview.de>
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@195496 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 ==============================================================================
 Done since 0.20.4 release
 
+- Fixed problem with jpegs with icc profile and acrobat reader 5 (Bug #11301)
+  Submitted by: Stephan Neuhaus <stephan.neuhaus@myview.de>
 - Fix bug in LinkSet.mergeLinks() (ArrayOutOfBoundsException when number of 
   rects is zero) (Jeremias Maerki)
 - Removed the necessity for a buildtools.jar (Jeremias Maerki)
