Perfomance tuning (reduced object creation etc.) (see bug #14103) Submitted by: Henrik Olsson <henrik.olsson@intentia.se>
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@195609 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 ==============================================================================
 Done since 0.20.4 release
 
+- Perfomance tuning (reduced object creation etc.) (see bug #14103)
+  Submitted by: Henrik Olsson <henrik.olsson@intentia.se> 
 - Update to Xerces 2.2.1 (Jeremias Maerki)
 - Fixed EOFException in TTFReader (Bug #14576)
   Submitted by: Bernard D'Have <bdhaveos@wanadoo.be>
